<resources>
    <string name="app_name">PeopleCounter</string>
    <string name="search_btn">Search</string>
    <string name="devices_label">Devices</string>
    <string name="stop_btn">Stop</string>
    <string name="about">About</string>
    <string name="library">Library</string>
    <string name="app_info">Application for scanning nearby bluetooth devices</string>
    <string name="author" translatable="false">Adam Gregořica</string>
    <string name="save">Save</string>
    <string name="birthday_false">Author does not have a birthday today</string>
    <string name="birthday_true">Today\'s the author\'s birthday 🎉</string>
    <string name="email" translatable="false">Email</string>
    <string name="github" translatable="false">Github</string>
</resources>